fixed pictures not aligning vertically

--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ main img {
 
 .group {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .item {
